--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JavaScript Fundamentals – Part 2</title>
+    <title>A Closer Look at Functions</title>
     <style>
       body {
         height: 100vh;
@@ -12,7 +12,6 @@
         align-items: center;
         background: linear-gradient(to top left, #28b487, #7dd56f);
       }
-
       h1 {
         font-family: sans-serif;
         font-size: 50px;
@@ -22,11 +21,25 @@
         text-align: center;
         color: white;
       }
+      .buy,
+      .poll {
+        font-size: 1.6rem;
+        padding: 1rem 2rem;
+        position: absolute;
+        top: 2rem;
+      }
+      .buy {
+        left: 2rem;
+      }
+      .poll {
+        right: 2rem;
+      }
     </style>
   </head>
-
   <body>
-    <h1>JavaScript Fundamentals 2021!</h1>
-    <script src="exercise_12.js"></script>
+    <h1>A Closer Look at Functions</h1>
+    <button class="buy">Buy new plane 🛩</button>
+    <button class="poll">Answer poll ⁉️</button>
+    <script src="exercise_14.js"></script>
   </body>
 </html>
